Fix for IE - an ugly horizontal scrollbar appears
 * for IE9 the nav bar was too narrow
 * for other IEs the width of each app element was to wide and
   cause the horizontal scoll bar - now this content is hidden like
   before this PR

--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -570,6 +570,7 @@ label.infield { cursor:text !important; top:1.05em; left:.85em; }
 	z-index: 75;
 	background: #383c43 url('../img/noise.png') repeat;
 	overflow-y: auto;
+	overflow-x: hidden;
 	-moz-box-sizing:border-box; box-sizing:border-box;
 	/* prevent ugly selection effect on accidental selection */
 	-webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;
